# tig

./: .gitignore  README.md  app.py  config.py  llm.py  main.py  pyproject.toml  requirements.txt  🏠_Home.py
analyze/: project.py
codebase/: file.py  parse.py  project.py
llm/: prompt.py  query.py
llm/prompts/: code-chunker-system-prompt.md  named-entity-recognizer-system-prompt.md  plan.md
model/: entity.py
pages/: 1_📝_Add_Note.py  1_🗣️_Personas.py
prompts/: context.md  generate-code.md
src/: llm.py  segment.py  test_segment.py
src/prompts/: context.md
tool/: action.py  schema.py
