[tool.poetry]
name = "tig"
version = "0.1.0"
description = ""
authors = ["Lucas Lofaro <lucasmlofaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
openai = "^0.27.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
